fix: add whitespace above and below the dashboard title in case it overflows

--- a/src/components/DashboardsBar/InformationBlock/styles/InformationBlock.module.css
+++ b/src/components/DashboardsBar/InformationBlock/styles/InformationBlock.module.css
@@ -22,6 +22,8 @@
     font-weight: 500;
     margin: 0;
     color: var(--colors-grey900);
+    padding-block-start: var(--spacers-dp4);
+    padding-block-end: var(--spacers-dp4);
 }
 
 @media only screen and (max-width: 480px) {
